# zappa-merle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: register-circleci-project.yml  test.yml
merle/: __init__.py  app.py  chat.py  cli.py  functions.py  init_ollama.py  managers.py  model_split.py  settings.py
merle/templates/: Dockerfile.template  authorizer.py  zappa_settings_authorizer.json.template
tests/: conftest.py  test_app.py  test_chat.py  test_cli.py  test_deployment_completeness.py  test_docker.py  test_functions.py
